--- a/themes/mat2/layout/_widget/links.ejs
+++ b/themes/mat2/layout/_widget/links.ejs
@@ -1,6 +1,13 @@
+<div class="widget">
+	
+	
+	<img src="/images/head.png" style="width:120px;height:120px">
+	
+</div>
+
 <% if (theme.links.length){ %>
 <div class="widget">
-	<h4><%= __('links') %></h4>
+	<!--<h4><%= __('links') %></h4>-->
 	<ul class="blogroll list-unstyled">
 	<% for (var i in theme.links){ %>
 		<li> <a href="<%- theme.links[i].url %>" title="<%- theme.links[i].intro %>" target="_blank"> <i class="mdi-action-launch"></i> <%= theme.links[i].title %></a></li>
