--- a/themes/mat2/layout/_widget/tagcloud.ejs
+++ b/themes/mat2/layout/_widget/tagcloud.ejs
@@ -4,7 +4,7 @@
 		<ul class="tag_box inline list-unstyled">		
 		<% site.tags.random().limit(20).each(function(item){ %>
 			<!--<li><a href="<%- config.root %><%- item.path %>"><%= item.name %><span><%= item.posts.length %></span></a></li>-->
-            <li><a href="<%- config.root %><%- item.path %>"><%= item.name %> <span class="badge"><%= item.posts.length %></span></a></li>
+            <li><a href="<%- config.root %><%- item.path %>"><%= item.name %> <span class="min-font">(<%= item.posts.length %>)</span> </a></li>
 		<% }); %>
 		<% if (site.tags.length > 20) { %>
 		   <li><a href="<%- config.root %>/tags">...<span class="badge"><%= site.tags.length %></span></a></li>
