--- a/themes/mat2/source/css/style.css
+++ b/themes/mat2/source/css/style.css
@@ -260,3 +260,15 @@ table td, table th {
     text-align: left;
     vertical-align: top;
 }
+
+
+
+code {  
+    white-space: pre-wrap;       /* CSS 3 */
+    white-space: -moz-pre-wrap;  /* Mozilla */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* IE 5.5+ */
+}
+
+
